# memory-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  README.md  README_zh.md  auto_save.py  install.bat  install.sh  pyproject.toml  requirements.txt  run.py  save_response.py  server.json  session_end.py  session_monitor.py  session_start.py  session_start_minimal.py  session_start_wrapper.bat  setup.bat  temp.json  test_race_condition.py
.github/workflows/: publish.yml
memory_mcp/: __init__.py  init.py  server.py
memory_mcp/hooks/: auto_save.py  save_response.py  session_monitor.py  session_start.py
memory_mcp/vector/: _encoder_worker.py  store.py
src/hooks/: auto_save.py  save_response.py  session_end.py  session_monitor.py
src/memory/: manager.py
src/vector/: __init__.py  store.py
