[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chenxiaofie-memory-mcp"
version = "0.1.3"
description = "情景+实体记忆 MCP 服务"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=2.3.0",
    "pydantic>=2.0.0",
]

[project.scripts]
memory-mcp = "src.server:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
