[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chenxiaofie-memory-mcp"
version = "0.2.1"
description = "情景+实体记忆 MCP 服务"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=2.3.0",
    "pydantic>=2.0.0",
]

[project.scripts]
memory-mcp = "src.server:run"
memory-mcp-session-start = "src.hooks.session_start:main"
memory-mcp-auto-save = "src.hooks.auto_save:main"
memory-mcp-save-response = "src.hooks.save_response:main"
memory-mcp-session-end = "src.hooks.session_end:main"
memory-mcp-monitor = "src.hooks.session_monitor:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
