[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chenxiaofie-memory-mcp"
version = "0.2.2"
description = "情景+实体记忆 MCP 服务"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=2.3.0",
    "pydantic>=2.0.0",
]

[project.scripts]
memory-mcp = "memory_mcp.server:run"
memory-mcp-session-start = "memory_mcp.hooks.session_start:main"
memory-mcp-auto-save = "memory_mcp.hooks.auto_save:main"
memory-mcp-save-response = "memory_mcp.hooks.save_response:main"
memory-mcp-session-end = "memory_mcp.hooks.session_end:main"
memory-mcp-monitor = "memory_mcp.hooks.session_monitor:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["memory_mcp*"]
